feat: Complete JPMS migration with Java 24 support (#1374)
This PR implements comprehensive Java Platform Module System (JPMS) support
for JLine 4.0, enabling modular applications while maintaining full backward
compatibility.

## Key Changes

JPMS Modules (12 modules):
- Core: terminal, reader, style, native
- Providers: terminal-jni (recommended), terminal-ffm (JDK 22+), terminal-jna
- Extended: builtins, console, console-ui, jansi-core, curses

Automatic Modules (6 modules):
- terminal-jansi (deprecated), groovy, remote-ssh, remote-telnet, demo, graal
- Remain automatic for compatibility with complex dependencies

Java 24 Support:
- FFM (Foreign Function Memory) API integration
- Requires --enable-native-access=org.jline.terminal.ffm on module path
- Best performance terminal provider for modern JDK

## Technical Implementation

Strong Encapsulation:
- Proper module-info.java with explicit exports/requires
- Internal APIs hidden from consumers
- Service Provider Interface (SPI) for terminal providers

Provider Recommendations:
1. JNI (recommended): No external dependencies, no special permissions, JDK 11+
2. FFM (best performance): Requires --enable-native-access, JDK 22+
3. JNA (alternative): Requires JNA dependency
4. Jansi (deprecated): Use JNI instead

Key Technical Details:
- JNI provider uses traditional JNI (no native access permissions needed)
- FFM provider uses Panama FFM API (requires --enable-native-access)
- Module path required for FFM native access to work
- Service provider discovery for automatic terminal provider selection

Backward Compatibility:
- Classpath applications work unchanged
- Uber-bundles (jline, jansi) remain as automatic modules
- No breaking API changes

## Documentation

Complete JPMS guide with migration instructions, provider selection
recommendations, module path requirements for FFM native access,
JNI vs FFM comparison and setup instructions, troubleshooting guide
for common JPMS issues, and best practices for different appl